# Hack-The-Image

./: .gitignore  Image.cpp  README.md  compile
cmodules/: FindCIMG.cmake
lib/Cryptography/: DiffieHellman.hpp  Rijndael.h.gch  a.out
lib/Image/: Image.cpp
src/: CMakeLists.txt  clean  compile  encdecr  encryptor.cpp  run_sender  userInterface.java
src/Client/: BMPImage.cpp  CMakeLists.txt  Client.java  Image.cpp  Image.hpp  Interface.java  Interface.java~  Receiver.java  compile  data  decryptor.cpp  encryptor.cpp  main.cpp  todo.txt  userInterface.java  userInterface.java~
src/Server/: Client.java  Client2.java  Server.cpp  a.out  server  todo.txt
src/Server/.metadata/: version.ini
src/Server/.metadata/.mylyn/.taskListIndex/: segments_1
src/Server/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
src/Server/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/: server-config.json
src/Server/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/local-history/: segments_1
src/Server/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/remote-history/: segments_2
src/Server/.metadata/.plugins/org.eclipse.jdt.core/: savedIndexNames.txt
src/Server/.metadata/.plugins/org.eclipse.jdt.launching/: .install.xml
src/Server/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
src/cmodules/: FindCIMG.cmake  FindCryptoPP.cmake  LibFindMacros.cmake
src/lib/: CMakeLists.txt
src/lib/Cryptography/: AES.cpp  AES.hpp  CMakeLists.txt  DiffieHellman.cpp  Rijndael.cpp  Rijndael.h
src/lib/Image/: CMakeLists.txt  Image.cpp  Image.hpp
src/src/: CMakeLists.txt  Server.cpp  decryptor.cpp
